@@ -1,3 +1,3 @@
-debian/libswe.3
-debian/swetest.1
-debian/swemini.1
+libswe.3
+swetest.1
+swemini.1
